--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "react-metamask",
   "version": "0.1.0",
+  "description": "Simple SPA on React",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,6 +20,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "keywords": [
+    "JavaScript",
+    "JS",
+    "SPA",
+    "React"
+  ],
+  "author": "BuGalter <wardoc78@gmail.com>",
+  "license": "Apache-2.0",
   "eslintConfig": {
     "extends": [
       "react-app",
